# A-stock-level1-dump

./: .gitignore  Cargo.toml  OPTIMIZATION_SUMMARY.md  config.toml  docker-compose.yml  readme.md  setup.sh  test_v2.sh  行业分类.xlsx
clickhouse_config/: logging.xml
data/: trading_calendar.json
src/: config.rs  lib.rs  models.rs
src/db/: bulk.rs  client.rs  mod.rs  schema.rs
src/fetcher/: extract.rs  highperf_client.rs  mod.rs  native_client.rs  parser.rs  protocol.rs
src/parser/: calendar.rs  excel.rs  mod.rs
src/utils/: enhanced_validator.rs  mod.rs  validator.rs
